# snowflake-query-optimizer

./: .gitignore  README.md  TESTING.md  connections.toml.example  pyproject.toml
.claude-plugin/: marketplace.json
docs/: REFERENCE.md  SNOWFLAKE_SETUP.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: excel-export.md  query-discovery.md  query-optimizer.md
plugin/commands/: optimize-snowflake.md
plugin/hooks/: hooks.json  sql_allowlist_hook.py
plugin/lib/: allowlist.py  discovery_sql.py  excel.py
plugin/mcp/: tools_config.yaml
plugin/skills/query-optimizer/: SKILL.md
plugin/skills/query-optimizer/references/: clustering-key.md  query-acceleration.md  search-optimization.md  warehouse-sizing.md
plugin/tests/: test_allowlist.py  test_discovery_sql.py  test_excel.py
