[project]
name = "snowflake-query-optimizer"
version = "0.1.0"
description = "Snowflake query optimization plugin pure-python modules"
requires-python = ">=3.9"
dependencies = ["openpyxl>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["plugin/tests"]
pythonpath = ["plugin"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["plugin"]
include = ["lib*"]
